examples/test/testpolicy894.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy894
  namespace: namespace252
spec:
  podSelector:
    matchLabels:
      key30: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value22
          key16: value49
          key17: value46
      podSelector:
        matchLabels:
          key32: value24
          key31: value28
          key37: value28
